--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.3.2",
     "sweetalert2": "^9.3.16",
     "vue": "^2.6.10",
+    "vue-quill": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
