--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "fadil",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -21,5 +24,8 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
+  },
+  "bin": {
+    "server": "bin/http.js"
   }
 }
