--- a/package.json
+++ b/package.json
@@ -14,6 +14,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.12",
+    "morgan": "^1.9.1"
+  },
   "bugs": {
     "url": "https://github.com/straf16/hacktivoverflow/issues"
   },
